kustomize/overlays/scots-lab/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    omni-kube-service-exposer.sidero.dev/port: "50088"
    omni-kube-service-exposer.sidero.dev/label: "Ntfy"
    omni-kube-service-exposer.sidero.dev/prefix: "ntfy"
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
